feat: - Add Ionic 7.2.1 with Angular 18 standalone components - Configure Roboto font - Setup ionicons centralized registration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ionic-app-base",
+  "name": "be220",
   "version": "0.0.0",
-  "author": "Ionic Framework",
+  "author": "Cristian Santos",
+  "description": "Modern fitness app UI demo",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
